Added Basic Navigtion Bar
Added navigation bar and css styling

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Title</title>
+    <title>Michael Sana</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
+    <div class="topnav">
+        <a class="active" href="#MichaelSana">Home</a>
+        <a href="#Portfolio">News</a>
+        <a href="#Resume/CV">Contact</a>
+      </div>
   </body>
 </html>
