--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <title>Michael Sana</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <div class="topnav">
-        <a class="active" href="#MichaelSana">Home</a>
-        <a href="#Portfolio">News</a>
-        <a href="#Resume/CV">Contact</a>
+        <a class="active" href="#MichaelSana">Michael Sana</a>
+        <a href="#Portfolio">Portfolio</a>
+        <a href="#Resume/CV">Resume/CV</a>
       </div>
   </body>
 </html>
