Added Project and CV pages

--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Michael Sana</title>
+    <title>Michael Sana Projects</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <div class="topnav">
-        <a class="active" href="#MichaelSana">Michael Sana</a>
-        <a href="#Projects">Projects</a>
+        <a href="#MichaelSana">Michael Sana</a>
+        <a class="active" href="#Projects">Projects</a>
         <a href="#Resume/CV">Resume/CV</a>
       </div>
   </body>
