Added page change functionality

--- a/cv.html
+++ b/cv.html
@@ -10,8 +10,8 @@
 
   <body>
     <div class="topnav">
-        <a href="#MichaelSana">Michael Sana</a>
-        <a href="#Projects">Projects</a>
+        <a href="#MichaelSana" onclick = "location.href = 'index.html'">Michael Sana</a>
+        <a href="#Projects" onclick="location.href = 'projects.html'">Projects</a>
         <a class="active" href="#Resume/CV">Resume/CV</a>
       </div>
   </body>
