--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     <div class="topnav">
         <a href="#MichaelSana">Michael Sana</a>
         <a class="active" href="#Projects">Projects</a>
-        <a href="#Resume/CV">Resume/CV</a>
+        <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
       </div>
   </body>
 </html>
