Added text on pages

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <body>
     <div class="topnav">
         <a class="active" href="#MichaelSana">Michael Sana</a>
-        <a href="#Projects">Projects</a>
-        <a href="#Resume/CV">Resume/CV</a>
+        <a href="#Projects" onclick="location.href = 'projects.html'">Projects</a>
+        <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
     </div>
+    <h1>Home Page</h1>
+
   </body>
 </html>
