--- a/projects.html
+++ b/projects.html
@@ -10,9 +10,10 @@
 
   <body>
     <div class="topnav">
-        <a href="#MichaelSana">Michael Sana</a>
+        <a href="#MichaelSana" onclick = "location.href = 'index.html'">Michael Sana</a>
         <a class="active" href="#Projects">Projects</a>
         <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
       </div>
+    <h1>Project Page</h1>
   </body>
 </html>
