--- a/cv.html
+++ b/cv.html
@@ -14,5 +14,6 @@
         <a href="#Projects" onclick="location.href = 'projects.html'">Projects</a>
         <a class="active" href="#Resume/CV">Resume/CV</a>
       </div>
+      <h1>CV page</h1>
   </body>
 </html>
