Added Projects to projects page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <a href="#Projects" onclick="location.href = 'projects.html'">Projects</a>
         <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
     </div>
-    <h1>Home Page</h1>
+    <div class = "content">
+        <h1>Home Page</h1>
+    </div>
 
   </body>
 </html>
