--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,19 @@
         <a class="active" href="#Projects">Projects</a>
         <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
       </div>
-    <h1>Project Page</h1>
+    <div class = "content">
+        <h1>School Projects</h1>
+        <h2>Completed Projects</h2>
+        <h3>Design Pattern Projects</h3>
+        <p onclick = "location.href = 'https://github.com/MichaelSana/StrategyDesignPatternProject'">Strategy Design Pattern</p>
+        <p onclick="location.href = 'https://github.com/MichaelSana/ObserverDesignProject'">Observer Design Pattern</p>
+        <p onclick="location.href = 'https://github.com/MichaelSana/DecoratorDesignProject'">Decorator Design Pattern</p>
+        <p onclick="location.href = 'https://github.com/MichaelSana/FactoryDesignPattern'">Factory Design Pattern</p>
+        <p onclick = "location.href = 'https://github.com/MichaelSana/ItteratorDesignPattern'">Itterator Design Pattern</p>
+        <p onclick ="location.href = 'https://github.com/MichaelSana/SingletonDesignPattern'">Singleton Design Pattern</p>
+        <p onclick = "location.href = 'https://github.com/MichaelSana/CommandDesignPattern'">Command Design Pattern</p>
+        <p onclick="location.href = 'https://github.com/MichaelSana/StateDesignPattern'">State Design Pattern</p>
+        <p onclick = "location.href = 'https://github.com/MichaelSana/AdapterDesignPattern'">Adapter Design Pattern</p>
+    </div>
   </body>
 </html>
