--- a/cv.html
+++ b/cv.html
@@ -14,6 +14,8 @@
         <a href="#Projects" onclick="location.href = 'projects.html'">Projects</a>
         <a class="active" href="#Resume/CV">Resume/CV</a>
       </div>
-      <h1>CV page</h1>
+      <div class = "content">
+        <h1>CV Page</h1>
+    </div>
   </body>
 </html>
