--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <a href="#Projects" onclick="location.href = 'projects.html'">Projects</a>
         <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
     </div>
-    <div class = "content">
-        <h1>Home Page</h1>
+    <div class = "about_me">
+      <div class = profile_picture >
+        <img src ="./pictures/profile_picture.jpeg" style="height:150px; border-radius: 50%; border: 10px solid #333">
+      </div>
     </div>
 
   </body>
