Fixed picture styling and added Name

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
     </div>
     <div class = "about_me">
-      <div class = profile_picture >
+      <div class = "profile_picture" >
         <img src ="./pictures/profile_picture.jpeg" style="height:150px; border-radius: 50%; border: 10px solid #333">
+      </div>
+      <div class = "name">
+        <p>Michael Sana</p>  
       </div>
     </div>
 
