Added about me information and re-formatted browser project

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       <div class = "name">
         <p>Michael Sana</p>  
       </div>
+      <div class = "information">
+        <p>Email: msana@email.sc.edu</p>
+        <p>Phone: 864-982-5441</p>
+        <p>Social Medias</p>
+        <p onclick="location.href = 'https://www.linkedin.com/in/michael-sana-4170071b0/'">LinkedIn</p>
+        <p onclick="location.href = 'https://twitter.com/Michael_A_Sana'">Twitter</p>
+      </div>
     </div>
 
   </body>
