--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,9 @@
         <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
       </div>
     <div class = "content">
+        <h1>Independant Projects</h1>
+        <h2>In Progress</h2>
+        <p onclick="location.href = snake.html">Browser Snake</p>
         <h1>School Projects</h1>
         <h2>Completed Projects</h2>
         <h3>Design Pattern Projects</h3>
