--- a/cv.html
+++ b/cv.html
@@ -14,8 +14,11 @@
         <a href="#Projects" onclick="location.href = 'projects.html'">Projects</a>
         <a class="active" href="#Resume/CV">Resume/CV</a>
       </div>
-      <div class = "content">
-        <h1>CV Page</h1>
+      <div class = "download_resume">
+        <a href="./Resume.pdf" download="Michael_Sana_Resume">Download</a>
+    </div>
+    <div class = "resume">
+
     </div>
   </body>
 </html>
