--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <div class = "content">
         <h1>Independant Projects</h1>
         <h2>In Progress</h2>
-        <p onclick="location.href = snake.html">Browser Snake</p>
+        <p onclick="location.href = './projects/snake.html'">Browser Snake</p>
         <h1>School Projects</h1>
         <h2>Completed Projects</h2>
         <h3>Design Pattern Projects</h3>
