Updated Styling and added Content to main content section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <p class="hover" onclick="location.href = 'https://twitter.com/Michael_A_Sana'">Twitter</p>
       </div>
     </div>
+    <div class ="main_content">
+       <p>Hello, my name is Michael Sana. Sorry for the website not being complete yet I am working on it daily. If you would like to see some of my projects please go to the projects section. I also have some private repositories that my teacher request stay private that I would be willing to share if you email me.</p> 
+    </div>
 
   </body>
 </html>
