--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <p>Social Medias</p>
         <p class="hover" onclick="location.href = 'https://www.linkedin.com/in/michael-sana-4170071b0/'">LinkedIn</p>
         <p class="hover" onclick="location.href = 'https://twitter.com/Michael_A_Sana'">Twitter</p>
+        <p class="hover" onclick="location.href = 'https://github.com/MichaelSana'">GitHub</p>
       </div>
     </div>
     <div class ="main_content">
