CV page changes

--- a/cv.html
+++ b/cv.html
@@ -14,11 +14,13 @@
         <a href="#Projects" onclick="location.href = 'projects.html'">Projects</a>
         <a class="active" href="#Resume/CV">Resume/CV</a>
       </div>
+    <div class = cv_main>
       <div class = "download_resume">
-        <a href="./Resume.pdf" download="Michael_Sana_Resume">Download</a>
-    </div>
-    <div class = "resume">
-      
-    </div>
+          <a href="./Resume.pdf" download="Michael_Sana_Resume">Download</a>
+      </div>
+      <div class = "resume">
+        <p>Resume</p>
+      </div>
+  </div>
   </body>
 </html>
