Added content to index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
       </div>
     </div>
     <div class ="main_content">
-       <p>Hello, my name is Michael Sana. Sorry for the website not being complete yet I am working on it daily. If you would like to see some of my projects please go to the projects section. I also have some private repositories that my teacher request stay private that I would be willing to share if you email me.</p> 
+      <h1 style = "text-align: center;">About Me</h1>
+       <p>Hello, my name is Michael Sana. I am a 3rd year Computer Science student at the University of South Carolina at the Columbia Campus. 
+         I am currently doing research with the Artificial Intelligence Institute under Dr. Forest Agostinelli. The research is focused mostly
+         on lifelong learning. After I finish my undergraduate degree I hope to get a job as a Software Engineer or working with AI fulltime while
+         I continue my education part-time to get my masters degree. </p> 
+      <h1 style="text-align: center;">Interests</h1>
+        <p>I am still very new to Computer Science, I only truly dove into it my freshman year of university so things get added to my interests
+           pretty often. Currently, my main interests are Full Stack Development and Artificial Intelligence. I enjoy full stack development because
+           I hope to be able to make something that will make someones life easier.
+           My interest with Artifical Intelligence did not come until I started doing research with the university but now I am very curious at the limits
+           of AI and where it can take us.
+        </p>
     </div>
 
   </body>
