Added re-route to design pattern page to cut down on clutter on projects page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="topnav">
         <a class="active" href="#MichaelSana">Michael Sana</a>
         <a href="#Projects" onclick="location.href = 'projects.html'">Projects</a>
-        <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
     </div>
     <div class = "about_me">
       <div class = "profile_picture" >
@@ -41,7 +40,9 @@
            pretty often. Currently, my main interests are Full Stack Development and Artificial Intelligence. I enjoy full stack development because
            I hope to be able to make something that will make someones life easier.
            My interest with Artifical Intelligence did not come until I started doing research with the university but now I am very curious at the limits
-           of AI and where it can take us.
+           of AI and where it can take us. My current research with Dr. Forest Agostinelli is with Lifelong Reinforcement learning 
+           algorithms that solve different various puzzles starting with the 8-puzzle and this can hopefully be adapted to help in 
+           fields such as chemistry.
         </p>
     </div>
 
