--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,6 @@
     <div class="topnav">
         <a href="#MichaelSana" onclick = "location.href = 'index.html'">Michael Sana</a>
         <a class="active" href="#Projects">Projects</a>
-        <a href="#Resume/CV" onclick="location.href = 'cv.html'">Resume/CV</a>
       </div>
     <div class = "content">
         <h1>Independant Projects</h1>
@@ -30,7 +29,7 @@
                   show users the recipe(s) that they would be more likely to enjoy based on their past choices.</p3>
                 <p3>Code can be sent upon request, once the app is launched the google play link will be here.</p3>
         <h2>Completed Projects</h2>
-          <h3>Design Pattern Projects</h3>
+          <h3 onclick = "location.href = 'designPatterns.html'">Design Pattern Projects</h3>
             <p onclick = "location.href = 'https://github.com/MichaelSana/StrategyDesignPatternProject'">Strategy Design Pattern</p>
             <p onclick="location.href = 'https://github.com/MichaelSana/ObserverDesignProject'">Observer Design Pattern</p>
             <p onclick="location.href = 'https://github.com/MichaelSana/DecoratorDesignProject'">Decorator Design Pattern</p>
