Added more description is design patterns

--- a/designPatterns.html
+++ b/designPatterns.html
@@ -14,14 +14,15 @@
         <a class="active" href="#Projects">Projects</a>
       </div>
     <div class = "content">
-    <p>All design pattern projects were completed as a part of my coursework for CSCE 247 "Software Engineering"</p>
+    <p>All design pattern projects were completed as a part of my coursework for CSCE 247 "Software Engineering". Outputs can be found 
+        in the github links aswell.</p>
     <h1>Design Pattern Projects</h1>
-        <p onclick = "location.href = 'https://github.com/MichaelSana/StrategyDesignPatternProject'">Strategy Design Pattern</p>
         <p onclick="location.href = 'https://github.com/MichaelSana/ObserverDesignProject'">Observer Design Pattern</p>
         <p onclick="location.href = 'https://github.com/MichaelSana/DecoratorDesignProject'">Decorator Design Pattern</p>
         <p onclick="location.href = 'https://github.com/MichaelSana/FactoryDesignPattern'">Factory Design Pattern</p>
         <p onclick = "location.href = 'https://github.com/MichaelSana/ItteratorDesignPattern'">Itterator Design Pattern</p>
         <p onclick ="location.href = 'https://github.com/MichaelSana/SingletonDesignPattern'">Singleton Design Pattern</p>
+        <p onclick = "location.href = 'https://github.com/MichaelSana/StrategyDesignPatternProject'">Strategy Design Pattern</p>
         <p onclick = "location.href = 'https://github.com/MichaelSana/CommandDesignPattern'">Command Design Pattern</p>
         <p onclick="location.href = 'https://github.com/MichaelSana/StateDesignPattern'">State Design Pattern</p>
         <p onclick = "location.href = 'https://github.com/MichaelSana/AdapterDesignPattern'">Adapter Design Pattern</p>
