--- a/projects.html
+++ b/projects.html
@@ -20,25 +20,16 @@
         <h1>School Projects</h1>
         <h2>In Progress</h2>
           <h3>Capstone Computing Project</h3>>
-            <p2> I Am Chef</p2>
+            <h4> I Am Chef</h4>
               <p3>“I Am Chef” is an android app that would take in any of your health conditions, ingredients you have, and or goals you 
                   have to then give you recipes that will help you reach your goals or just stay healthy in general. Me and a group of my 
                   peers are creating “I Am Chef” for our Senior Capstone Project, although the app idea is not ours.
                   My primary role in the creation of “I Am Chef” is too create the categories page that will show the different categories of 
                   food/ingredients and to create the search feature. I will also be the one of the people making the algorithm that will 
                   show users the recipe(s) that they would be more likely to enjoy based on their past choices.</p3>
-                <p3>Code can be sent upon request, once the app is launched the google play link will be here.</p3>
+                <p4>Code can be sent upon request, once the app is launched the google play link will be here.</p4>
         <h2>Completed Projects</h2>
           <h3 onclick = "location.href = 'designPatterns.html'">Design Pattern Projects</h3>
-            <p onclick = "location.href = 'https://github.com/MichaelSana/StrategyDesignPatternProject'">Strategy Design Pattern</p>
-            <p onclick="location.href = 'https://github.com/MichaelSana/ObserverDesignProject'">Observer Design Pattern</p>
-            <p onclick="location.href = 'https://github.com/MichaelSana/DecoratorDesignProject'">Decorator Design Pattern</p>
-            <p onclick="location.href = 'https://github.com/MichaelSana/FactoryDesignPattern'">Factory Design Pattern</p>
-            <p onclick = "location.href = 'https://github.com/MichaelSana/ItteratorDesignPattern'">Itterator Design Pattern</p>
-            <p onclick ="location.href = 'https://github.com/MichaelSana/SingletonDesignPattern'">Singleton Design Pattern</p>
-            <p onclick = "location.href = 'https://github.com/MichaelSana/CommandDesignPattern'">Command Design Pattern</p>
-            <p onclick="location.href = 'https://github.com/MichaelSana/StateDesignPattern'">State Design Pattern</p>
-            <p onclick = "location.href = 'https://github.com/MichaelSana/AdapterDesignPattern'">Adapter Design Pattern</p>
     </div>
   </body>
 </html>
